libreoffice (1:6.4.4~rc1~git20200408-1) UNRELEASED; urgency=medium

  * New upstream snapshot 
    - fixes size of gtk3 print dialog (closes: #955981)

  * debian/watch:
    - add options for alpha, beta and rc "releases" using dev-builds.

 -- Rene Engelhard <rene@debian.org>  Wed, 08 Apr 2020 19:43:38 +0200

libreoffice (1:6.4.3~rc2-1) experimental; urgency=medium

  * New upstream release candidate

  * debian/rules:
    - fix gdb helpers ending up in both libreoffice-core-nogui-dbgsym
      and libreoffice-writer-nogui-dbgsym

 -- Rene Engelhard <rene@debian.org>  Tue, 07 Apr 2020 18:12:32 +0200

libreoffice (1:6.4.3~rc1-3) experimental; urgency=medium

  * tests/patches/uicheck-standalone.diff: make apply again

  * merge from Ubuntu:
    - libreoffice-math: Add Breaks/Replaces libreoffice-common
    - debian/patches/poppler-0.86.diff: Fix build with poppler 0.86.0

 -- Rene Engelhard <rene@debian.org>  Sat, 28 Mar 2020 10:52:28 +0100

libreoffice (1:6.4.3~rc1-2) experimental; urgency=medium

  * debian/rules:
    - fix redland dependencies for libreoffice-core-nogui 

 -- Rene Engelhard <rene@debian.org>  Thu, 26 Mar 2020 17:34:54 +0100

libreoffice (1:6.4.3~rc1-1) experimental; urgency=medium

  * New upstream release candidate

  [ Rene Engelhard ]
  * debian/patches/Fix-build-with-boost-lesser-than-1.68.diff: add from
    gerrit, thanks Rico Tschichholz

  * debian/rules:
    - don't delete libuuilo.so in -core-nogui (closes: #954670)
    - don't ogltrans stuff in -impress, OGLTrans.so isn't built
    - use default boost (and thus system-mdds) again and revert
      BOOST_MINVER= (>= 1.68) change

  [ Jochen Sprickerhof ] 
  * debian/control.in:
    - Prefer libreoffice-core-nogui for -nogui variants
      Closes: #954319
    - Drop -core-nogui in non -nogui packages (if -nogui exists)
    - Fix report_builder and firebird nogui depends

 -- Rene Engelhard <rene@debian.org>  Thu, 26 Mar 2020 15:47:27 +0100

libreoffice (1:6.4.2-2) unstable; urgency=medium
