@@ -3727,7 +3727,6 @@ endif
 binary: binary-arch binary-indep
 
 ifeq "$(USE_GIT_TARBALLS)" "y"
-
 # $(1) is the upstream name of the repo
 # $(2) is the name of the tarball
 # $(3) is the path to archive (empty for everything)
@@ -3799,9 +3798,12 @@ get-orig-source: $(call get_orig_tarball,-tarballs) tarballs/fetch.log
 unpack: tarballs/fetch.log
 	dh_testdir
 endif
-else
+endif
+
+ifeq "$(USE_SOURCE_TARBALLS)" "y"
 get-orig-source:
 	PATH=$(CURDIR)/debian/scripts:$$PATH uscan --watchfile=$(CURDIR)/debian/watch --verbose --force
+	debian/scripts/fix_component_tarballs.sh
 endif
 
 .PHONY: control
