@@ -1,25 +1,0 @@
-#!/bin/sh
-
-set -x
-
-#   mk-origtargz --package libreoffice --version 6.0.1 --compression xz --directory .. --copyright-file debian/copyright ../libreoffice-6.0.1.1.tar.xz
-#   mk-origtargz --package libreoffice --version 6.0.1 --component translations --compression xz --directory .. --copyright-file debian/copyright ../libreoffice-translations-6.0.1.1.tar.xz
-
-pwd=`pwd`
-tmp=`mktemp -q -d`
-
-if echo "$5" | grep -q component && [ -n "$6" ]; then
-	echo "Extracting upstream $6 tarball..."
-	cd ${tmp}
-	tar xfvJ ${pwd}/${13}
-	cd ${2}-`basename ${13} .tar.xz | cut -d- -f3`
-	echo "Creating ${10}/${2}_${4}.orig-${6}.tar.${8} from $6..."
-	tar cfvJ ${pwd}/${10}/${2}_${4}.orig-${6}.tar.${8} $6
-	cd ${pwd}
-	rm -rf $tmp/*
-else
-	echo "Symlinking ${8}/${2}_${4}.orig.tar.${6} to ${11}"
-	ln -sf `basename ${11}` ${8}/${2}_${4}.orig.tar.${6}
-fi
-
-exit 0
