@@ -5,10 +5,10 @@ version=4
 #opts="compression=xz,pgpsigurlmangle=s/$/.asc/" \
 #  http://download.documentfoundation.org/@PACKAGE@/src/(\d.\d.\d)/@PACKAGE@-(\d.\d.\d).(\d).tar.xz debian
 #
-#opts="compression=xz,pgpsigurlmangle=s/$/.asc/,component=helpcontent2" \
+#opts="pgpsigurlmangle=s/$/.asc/,component=helpcontent2" \
 #  http://download.documentfoundation.org/@PACKAGE@/src/(\d.\d.\d)/@PACKAGE@-help-(\d.\d.\d).(\d).tar.xz same
 #
-#opts="compression=xz,pgpsigurlmangle=s/$/.asc/,component=translations" \
+#opts="pgpsigurlmangle=s/$/.asc/,component=translations" \
 #  http://download.documentfoundation.org/@PACKAGE@/src/(\d.\d.\d)/@PACKAGE@-translations-(\d.\d.\d).(\d).tar.xz same
 
 # FIXME: Combine those to one part?
@@ -19,18 +19,18 @@ version=4
 opts="compression=xz,pgpsigurlmangle=s/$/.asc/,versionmangle=s/(\d.\d.\d).(\d)/$1~rc$2/" \
    https://dev-builds.libreoffice.org/pre-releases/src/@PACKAGE@-(\d.\d.\d).(\d).tar.xz debian
 
-opts="compression=xz,pgpsigurlmangle=s/$/.asc/,component=helpcontent2,versionmangle=s/(\d.\d.\d).(\d)/$1~rc$2/" \
+opts="pgpsigurlmangle=s/$/.asc/,component=helpcontent2,versionmangle=s/(\d.\d.\d).(\d)/$1~rc$2/" \
    https://dev-builds.libreoffice.org/pre-releases/src/@PACKAGE@-help-(\d.\d.\d).(\d).tar.xz same
 
-opts="compression=xz,pgpsigurlmangle=s/$/.asc/,component=translations,versionmangle=s/(\d.\d.\d).(\d)/$1~rc$2/" \
+opts="pgpsigurlmangle=s/$/.asc/,component=translations,versionmangle=s/(\d.\d.\d).(\d)/$1~rc$2/" \
    https://dev-builds.libreoffice.org/pre-releases/src/@PACKAGE@-translations-(\d.\d.\d).(\d).tar.xz same
 
 # alpha, beta
 #opts="compression=xz,pgpsigurlmangle=s/$/.asc/,versionmangle=s/(\d.\d.\d).(alpha|beta).(\d)/$1~$2$3/" \
 #   https://dev-builds.libreoffice.org/pre-releases/src/@PACKAGE@-(\d.\d.\d).0.(alpha|beta)(\d).tar.xz debian
 #
-#opts="compression=xz,pgpsigurlmangle=s/$/.asc/,versionmangle=s/(\d.\d.\d).(alpha|beta).(\d)/$1~$2$3/" \
+#opts="pgpsigurlmangle=s/$/.asc/,versionmangle=s/(\d.\d.\d).(alpha|beta).(\d)/$1~$2$3/" \
 #   https://dev-builds.libreoffice.org/pre-releases/src/@PACKAGE@-help-(\d.\d.\d).0.(alpha|beta)(\d).tar.xz same
 #
-#opts="compression=xz,pgpsigurlmangle=s/$/.asc/,versionmangle=s/(\d.\d.\d).(alpha|beta).(\d)/$1~$2$3/" \
+#opts="pgpsigurlmangle=s/$/.asc/,versionmangle=s/(\d.\d.\d).(alpha|beta).(\d)/$1~$2$3/" \
 #   https://dev-builds.libreoffice.org/pre-releases/src/@PACKAGE@-translations-(\d.\d.\d).0.(alpha|beta)(\d).tar.xz same
