@@ -5,6 +5,10 @@ libreoffice (1:6.4.4~rc1~git20200408-1) UNRELEASED; urgency=medium
 
   * debian/watch:
     - add options for alpha, beta and rc "releases" using dev-builds.
+  * debian/scripts/fix_component_tarballs.sh: add new - re-create the component
+    tarballs after uscan/mk-origtgz
+  * debian/rules:
+    - use new scripts/fix_component_tarballs.sh after uscan in get-orig-source
 
  -- Rene Engelhard <rene@debian.org>  Wed, 08 Apr 2020 19:43:38 +0200
 
